<resources>
    <string name="app_name">NoteApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login">login?</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="sign_up">SIGN UP</string>
    <string name="confirm_password">Confirm password</string>
    <string name="do_not_have_an_account">DO not have an account?</string>
    <string name="forget_password">forget password?</string>
    <string name="login_">Login</string>

    <string name="error_tag_text">Enter text</string>
    <string name="enter_first_name">Enter first name</string>
    <string name="enter_last_name">Enter last name</string>
    <string name="enter_email">Enter email address</string>
    <string name="invalid_email">Invalid email entered</string>
    <string name="enter_password">Enter password</string>
    <string name="invalid_password">Your password must be at least 8 characters</string>
    <string name="write_something">Write something...</string>
    <string name="title">Title</string>
    <string name="search">Search...</string>
    <string name="no_notes_available">No notes available!!</string>
    <string name="color">Color:</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>
    <string name="update">Update</string>
    <string name="note_title">Note Title</string>
    <string name="note_body">Note Body</string>
    <string name="date">date</string>
    <string name="logout">Logout</string>
</resources>