<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/ColorWhite"
    android:orientation="vertical"
    tools:context=".ui.auth.LoginFragment">

    <include
        android:id="@+id/reg_toolbar"
        layout="@layout/reg_app_bar" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/_28sdp"
        android:fontFamily="@font/brandon_grotesque_bold_italic_58a8a48221563"
        android:gravity="center"
        android:text="@string/login_"
        android:textColor="@color/ColorBlack"
        android:textSize="@dimen/_28ssp"
        android:textStyle="bold" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/emailTI_log"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:paddingStart="@dimen/_10sdp"
        android:paddingEnd="@dimen/_10sdp"
        app:endIconMode="clear_text">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passwordTI_log"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:paddingStart="@dimen/_10sdp"
        android:paddingEnd="@dimen/_10sdp"
        app:endIconMode="password_toggle">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/forget_password_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/_10sdp"
        android:text="@string/forget_password"
        android:textAlignment="viewEnd"
        android:textColor="@color/ColorBlack"
        android:textSize="@dimen/_15sdp" />


    <RelativeLayout
        android:id="@+id/button_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/LoginBtnLoginAct"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_8sdp"
            android:layout_marginTop="@dimen/_16sdp"
            android:background="@drawable/btn_background"
            android:fontFamily="@font/brandon_grotesque_medium_italic_58a8a3c40866a"
            android:text="@string/login_"
            android:textColor="@color/ColorWhite"
            android:textSize="@dimen/_20ssp"
            android:textStyle="bold" />

        <ProgressBar
            android:id="@+id/login_progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="@dimen/_30sdp"
            android:layout_height="@dimen/_30sdp"
            android:layout_centerInParent="true"
            android:layout_marginTop="@dimen/_10sdp"
            android:elevation="@dimen/_7sdp"
            android:indeterminateTint="@color/ColorWhite"
            android:visibility="invisible" />

    </RelativeLayout>


    <LinearLayout
        android:id="@+id/singUp_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_8sdp"
            android:fontFamily="@font/brandon_grotesque_medium_italic_58a8a3c40866a"
            android:text="@string/do_not_have_an_account"
            android:textColor="@color/ColorBlack"
            android:textSize="@dimen/_14ssp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_8sdp"
            android:fontFamily="@font/brandon_grotesque_medium_italic_58a8a3c40866a"
            android:text="@string/sign_up"
            android:textColor="@color/ColorBlack"
            android:textSize="@dimen/_16ssp"

            />

    </LinearLayout>


</LinearLayout>